# buddy-mlir

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  core  dump.mlir  dynamic-input-notes.md  env.sh  flake.nix  llvm  pyproject.toml  requirements.txt  retry-submodule.sh  riscv-jitlink.patch  rope-b2fe557ff-llvm21rc2-lo-tosa.mlir  rope-b2fe557ff-llvm21rc2.ll  rope-b2fe557ff-llvm21rc2.mlir  setup.py  sync_and_test.sh
examples/: CMakeLists.txt  README.md  kernels.h  lit.cfg.py  lit.site.cfg.py.in  run_examples.py
examples/AMEDialect/: .gitignore  makefile  mma-complete-demo.mlir  mma-dw-mm.mlir  mma-w-mm.mlir  mqma-b-mm.mlir
examples/BOSCAMEDialect/: README.md  bosc-mma.mlir  generic-broadcast-column.mlir  generic-broadcast-element.mlir  generic-broadcast-row.mlir  generic-elementwise-add.mlir  generic-matmul.mlir  generic-transpose.mlir  linalg-to-boscame-matmul.mlir  makefile
examples/BuckyballDialect/: .gitignore  CMakeLists.txt  Main.cpp  Makefile  README.md  bb_dequant.mlir  bb_im2col.mlir  bb_matmul.mlir  bb_mergetile_matmul.mlir  bb_metatile_matmul.mlir  bb_mul_warp16.mlir  bb_mvin.mlir  bb_mvin_mvout.mlir  bb_mvout.mlir  bb_quant.mlir  bb_relu.mlir  bb_systolic.mlir  bb_tile_matmul.mlir  bb_transpose.mlir  debug_helper.c
examples/BudDialect/: TestArrayAttr.mlir  TestConstant.mlir  TestInlineInterface.mlir  TestPrint.mlir  TestStrAttr.mlir  VectorConfig.mlir  bud-array-attr.mlir  bud-constant.mlir  bud-inline-interface.mlir  bud-print.mlir  bud-str-attr.mlir  makefile
examples/BuddyAdd/: .gitignore  Add-main.cpp  CMakeLists.txt  README.md  add-main.cpp  import-custom.py  import-model.py
examples/BuddyAttention/: CMakeLists.txt  README.md  attention_model.py  attention_runner.cpp  import-attention.py
examples/BuddyBert/: .gitignore  CMakeLists.txt  README.md  bert-main.cpp  bert.mlir  import-bert.py
examples/BuddyCodeT5/: .gitignore  CMakeLists.txt  codet5-main.cpp  import-codet5.py
examples/BuddyConvolution/: CMakeLists.txt  conv2d-nhwc-fhwc-adapt.mlir  conv2d-nhwc-fhwc-opt.mlir  conv2d-nhwc-fhwc-seq.mlir  conv2d-nhwc-fhwc-vec.mlir  conv2d-nhwc-fhwc.mlir  conv2d.mlir  makefile
examples/BuddyDeepSeekR1/: .gitignore  AnalyseDialectOps.py  CMakeLists.txt  README.md  buddy-analysis-dialect-ops.py  buddy-deepseek-r1-annotation.mlir  buddy-deepseek-r1-bf16-main.cpp  buddy-deepseek-r1-bf16-pd.cpp  buddy-deepseek-r1-cli.cpp  buddy-deepseek-r1-f16-main.cpp  buddy-deepseek-r1-main.cpp  buddy-deepseek-r1-packed-main.cpp  buddy-deepseek-r1-tiered-kv-cache-main.cpp  buddy-deepseek-r1-w4a16-main.cpp  buddy-deepseek-r1-w8a16-main.cpp  buddy-deepseek-r1-w8a32-main.cpp  buddy-deepseek-r1-w8a8-main.cpp  debug_qkv_order.py  deepseek-r1.json  import-deepseek-r1-tiered-kv-cache.py  import-deepseek-r1-w4a16.py  import-deepseek-r1-w8a16.py  import-deepseek-r1-w8a32.py  import-deepseek-r1-w8a8.py  import-deepseek-r1.py  makefile  print_graph_nodes.py  run-subgraphs-python.py  subgraph0_decode.mlir  subgraph0_decode_bufferize.mlir  subgraph0_decode_linalg.mlir  subgraph0_decode_simplify.mlir  test_qkv_fusion.py  vocab.txt
examples/BuddyDeepSeekR1-GPU/: CMakeLists.txt  README.md  buddy-deepseek-r1-gpu-main.cpp  import-deepseek-r1-gpu.py
examples/BuddyDeepSeekR1RVV/: CMakeLists.txt  README.md
examples/BuddyDensenet/: .gitignore  CMakeLists.txt  README.md  densenet-main.cpp  import-densenet.py
examples/BuddyF16Llama/: .gitignore  CMakeLists.txt  README.md  bf16-llama-main.cpp  f16-llama-main.cpp  f32-llama-main.cpp  fp16-llama-main.cpp  import-llama.py  import-llama2.py  import-test-model.py
examples/BuddyF16Test/: .gitignore  CMakeLists.txt  README.md  bp16_f2b.cpp  f16test-main.cpp  fp16_f2h.cpp  fp16_h2f.cpp  import-f16test.py
examples/BuddyFusedLeNet/: CMakeLists.txt  README.md  buddy-lenet-import.py  buddy-lenet-main.cpp  lenet-model.pth
examples/BuddyFusion/: llama-fusion.py  resnet-fusion.py
examples/BuddyGPU/: .gitignore  README.md  batch_matmul-cubin.mlir  batch_matmul.mlir  conv2d.mlir  makefile  matmul-cubin.mlir  matmul.mlir  matmul.py  run-module-gpu.py  run-module.py  transform-conv2d.mlir  transform.mlir  transform_batch_matmul.mlir
examples/BuddyGemma4/: CMakeLists.txt  README.md  buddy-gemma4-e2b-f16-main.cpp  buddy-gemma4-e2b-main.cpp  import-gemma4.py  patch_decode_mlir.py
examples/BuddyGen/: .gitignore  GenMemRef.cpp
examples/BuddyGraph/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  forward.mlir  import-dynamo-break.py  llama-main.cpp  llvm.mlir  main.cc  makefile  subgraph0.mlir  test-driver.py  test.mlir  wlq.out
examples/BuddyJIT/: BuddyJIT.py  README.md  model.py  pytorch_matrix_multiplication.py
examples/BuddyJITTrain/: README.md  model.py  train_mlp.py
examples/BuddyJitter/: matrix_multiplication.mlir  pytorch_matrix_multiplication.py
examples/BuddyLeNet/: .gitignore  CMakeLists.txt  README.md  buddy-lenet-import.py  buddy-lenet-main.cpp  fake-lenet.mlir  graph.dot  lenet-model.pth  lenet.json  lenet.mlir  makefile  matmul-cubin.mlir  model.py  pytorch-lenet-inference.py  pytorch-lenet-train.py  subgraph1.mlir  tmp.mlir  transform.mlir
examples/BuddyLenet0/: arg0.data  graph.dot  import-lenet.py  lenet.json  lenet.mlir  subgraphs.json
examples/BuddyLlama/: .gitignore  .llama-main.cpp.swp  CMakeLists.txt  README-gpu.md  README.md  bf16-llama-main.cpp  config.txt  f16-llama-main.cpp  f32-llama-main.cpp  import-llama.py  import-llama2.py  llama-bf16-default.mlir  llama-bf16.mlir  llama-linalg-default.mlir  llama-main.cpp  llama-to-hf.py  llama.mlir  llama.sh  llama2-to-hf.py  llama_annotation.mlir  llama_beifen.mlir  llama_utils.cpp  llama_utils.h  makefile  prepare-tinnyllama.py  test-llama2.py  (+4 more)
frontend/: CMakeLists.txt
lib/: CMakeLists.txt
midend/: CMakeLists.txt  txt.txt
models/: CMakeLists.txt
runtime/: CMakeLists.txt  buddy-profiler.cpp  buddy_rng_utils.cpp
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tools/: CMakeLists.txt
(+2871 files in other folders)
