[build-system]
requires = [
  "setuptools>=69",
  "wheel",
  "build>=1.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "buddy"
description = "An MLIR-based compiler framework bridges DSLs (domain-specific languages) to DSAs (domain-specific architectures)."
requires-python = ">=3.10"
dynamic = ["entry-points", "scripts", "version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "buddy.__version__"}

[tool.ruff]
line-length = 120

select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

ignore = [
    # "F821", # Undefined name
    # "F403", # from module import *
    # "F405", # Name may be undefined
    # "F401", # Unused import
    # "E203", # Whitespace before ':'
    # "E402", # Module level import not at top of file
    # "E401", # Multiple imports on one line
    # "W605", # Invalid escape sequence
    # "E712", # Comparison to True/False
    # "E711", # Comparison to None
    # "F841", # Unused variable
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
