[build-system]
requires = [
  "setuptools>=69",
  "wheel",
  "build>=1.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "buddy"
description = "An MLIR-based compiler framework bridging DSLs to DSAs."
requires-python = ">=3.10"
dynamic = ["entry-points", "scripts", "version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "buddy.__version__"}

[tool.ruff]
line-length = 80

select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

ignore = [
    # "F821", # Undefined name
    # "F403", # from module import *
    # "F405", # Name may be undefined
    # "F401", # Unused import
    # "E203", # Whitespace before ':'
    # "E402", # Module level import not at top of file
    # "E401", # Multiple imports on one line
    # "W605", # Invalid escape sequence
    # "E712", # Comparison to True/False
    # "E711", # Comparison to None
    # "F841", # Unused variable
]

# lit.cfg.py: `config` is injected by lit when loading the file, not defined
# in-module.
# frontend/Python/ops/: star imports + verbose MLIR builders (per-directory
# ignores below).
[tool.ruff.lint.per-file-ignores]
"examples/lit.cfg.py" = ["F821"]
"tests/lit.cfg.py" = ["F821"]
"frontend/Python/ops/**" = [
    "B007", "B011", "B905",
    "C416",
    "E501",
    "E711", "E712", "E741",
    "F403", "F405", "F841",
    "SIM101", "SIM102", "SIM105", "SIM108",
    "UP031",
]
# graph.py: same star-import / MLIR builder style as ops/
"frontend/Python/graph/**" = [
    "B007", "B011", "B905",
    "C403", "C416",
    "E501",
    "E711", "E712", "E741",
    "F403", "F405", "F841",
    "SIM101", "SIM102", "SIM103", "SIM105", "SIM108",
    "UP031",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
